--- a/src/main/resources/localisation/mcclang_en.properties
+++ b/src/main/resources/localisation/mcclang_en.properties
@@ -5,6 +5,14 @@ Combat\ Release=Combat Release\!
 CannonDirector\ -\ Directing=You are now directing the cannons of this craft
 CannonDirector\ -\ No\ Longer\ Directing=You are no longer directing the cannons of this craft
 CannonDirector\ -\ Not\ Allowed\ On\ Craft=Cannon Director signs are not allowed on this type of craft
+Command\ -\ Must\ Be\ Player=You must be a player to use that command.
+Command\ -\ Current\ Mode=Current mode
+Command\ -\ Current\ Setting=Current setting
+Command\ -\ Specify\ Mode=You must specify a mode.
+Command\ -\ Specify\ Valid\ Mode=You must specify a valid mode.
+Command\ -\ Specify\ Setting=You must specify a setting.
+Command\ -\ Specify\ Valid\ Setting=You must specify a valid setting.
+Command\ -\ Tracer\ Set=Tracers now set to
 Killfeed\ -\ Sunk\ By=was sunk by
 Killfeed\ -\ With\ Assists=with assists from
 Log\ -\ Enter\ Combat= has entered combat.
