Fix combat release scuttle and added message

--- a/src/main/resources/localisation/mcclang_en.properties
+++ b/src/main/resources/localisation/mcclang_en.properties
@@ -2,6 +2,7 @@ AADirector\ -\ Directing=You are now directing the AA of this craft
 AADirector\ -\ No\ Longer\ Directing=You are no longer directing the AA of this craft
 AADirector\ -\ Not\ Allowed\ On\ Craft=AA Director signs are not allowed on this type of craft
 Combat\ Release=Combat Release\!
+Combat\ Release\ Message=Combat releasing is not allowed\!
 CannonDirector\ -\ Directing=You are now directing the cannons of this craft
 CannonDirector\ -\ No\ Longer\ Directing=You are no longer directing the cannons of this craft
 CannonDirector\ -\ Not\ Allowed\ On\ Craft=Cannon Director signs are not allowed on this type of craft
