--- a/src/main/resources/localisation/mcclang_en.properties
+++ b/src/main/resources/localisation/mcclang_en.properties
@@ -20,5 +20,6 @@ Log\ -\ Enter\ Combat= has entered combat.
 Log\ -\ Leave\ Combat= has left combat.
 Sign\ -\ Must\ Be\ Part\ Of\ Craft=Sign must be part of a piloted craft\!
 Startup\ -\ Failed\ Load\ Transparent=Failed to load transparent 
+Startup\ -\ Failed\ Load\ Type=Failed to load craft type
 Status\ -\ Enter\ Combat=You have now entered combat.
 Status\ -\ Leave\ Combat=You have now left combat.
