Initial redo of movement tracers

--- a/src/main/resources/localisation/mcclang_en.properties
+++ b/src/main/resources/localisation/mcclang_en.properties
@@ -13,13 +13,12 @@ Command\ -\ Specify\ Mode=You must specify a mode.
 Command\ -\ Specify\ Valid\ Mode=You must specify a valid mode.
 Command\ -\ Specify\ Setting=You must specify a setting.
 Command\ -\ Specify\ Valid\ Setting=You must specify a valid setting.
-Command\ -\ Tracer\ Set=Tracers now set to
+Command\ -\ Tracer\ Set=TNT Tracers now set to
+Command\ -\ Movement\ Tracer\ Set=Movement Tracers now set to
 Killfeed\ -\ Sunk\ By=was sunk by
 Killfeed\ -\ With\ Assists=with assists from
 Log\ -\ Enter\ Combat= has entered combat.
 Log\ -\ Leave\ Combat= has left combat.
 Sign\ -\ Must\ Be\ Part\ Of\ Craft=Sign must be part of a piloted craft\!
-Startup\ -\ Failed\ Load\ Transparent=Failed to load transparent 
-Startup\ -\ Failed\ Load\ Type=Failed to load craft type
 Status\ -\ Enter\ Combat=You have now entered combat.
 Status\ -\ Leave\ Combat=You have now left combat.
