Elytra Artillery Nerf
Added the config option "DisableDirectorElytra"(default false) where when true, will prevent players with elytras on from using directors. Checks both when equipping an elytra and trying to use a director sign.

Replaced calls to deprecated methods with supported ones. However, the supported ones seem to have display issues when used in chat

--- a/src/main/resources/localisation/mcclang_en.properties
+++ b/src/main/resources/localisation/mcclang_en.properties
@@ -1,14 +1,17 @@
 AADirector\ -\ Directing=You are now directing the AA of this craft
 AADirector\ -\ No\ Longer\ Directing=You are no longer directing the AA of this craft
 AADirector\ -\ Not\ Allowed\ On\ Craft=AA Director signs are not allowed on this type of craft
+AADirector\ -\ No\ Elytra\ While\ Directing=You cannot direct while wearing an elytra
 ArrowDirector\ -\ Directing=You are now directing the Arrows of this craft
 ArrowDirector\ -\ No\ Longer\ Directing=You are no longer directing the Arrows of this craft
 ArrowDirector\ -\ Not\ Allowed\ On\ Craft=Arrow Director signs are not allowed on this type of craft
+ArrowDirector\ -\ No\ Elytra\ While\ Directing=You cannot direct while wearing an elytra
 Combat\ Release=Combat Release\!
 Combat\ Release\ Message=Combat releasing is not allowed\!
 CannonDirector\ -\ Directing=You are now directing the cannons of this craft
 CannonDirector\ -\ No\ Longer\ Directing=You are no longer directing the cannons of this craft
 CannonDirector\ -\ Not\ Allowed\ On\ Craft=Cannon Director signs are not allowed on this type of craft
+CannonDirector\ -\ No\ Elytra\ While\ Directing=You cannot direct while wearing an elytra
 Command\ -\ Must\ Be\ Player=You must be a player to use that command.
 Command\ -\ Current\ Mode=Current mode
 Command\ -\ Current\ Setting=Current setting
@@ -18,6 +21,7 @@ Command\ -\ Specify\ Setting=You must specify a setting.
 Command\ -\ Specify\ Valid\ Setting=You must specify a valid setting.
 Command\ -\ Tracer\ Set=TNT Tracers now set to
 Command\ -\ Movement\ Tracer\ Set=Movement Tracers now set to
+Director\ -\ No\ Elytra\ While\ Directing=You Are Not Allowed To Direct While Wearing An Elytra
 Killfeed\ -\ Sunk\ By=was sunk by
 Killfeed\ -\ With\ Assists=with assists from
 Log\ -\ Enter\ Combat= has entered combat.
